# upgrade

./: README.md  meson.build
.github/workflows/: main.yml
data/: io.elementary.upgrade.appdata.xml.in  io.elementary.upgrade.daemon.desktop  io.elementary.upgrade.desktop.in  io.elementary.upgrade.helper  io.elementary.upgrade.policy.in.in  meson.build
data/files/focal/sources.list.d/: elementary.list  patches.list
data/files/jammy/sources.list.d/: elementary.list  patches.list
debian/: changelog  control  copyright
po/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+159 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+159 more)
src/: Application.vala  Config.vala.in  Daemon.vala  MainWindow.vala  Plug.vala  SessionManager.vala  Upgrade.vala  Utils.vala  meson.build
src/Clients/: UpgradeClient.vala
src/Helpers/: Inhibitor.vala  StatusParser.vala
src/Interfaces/: UpgradeInterface.vala
src/Objects/: Status.vala  Step.vala
src/Services/: DBusServer.vala  UpgradeService.vala
src/Views/: AbstractUpgradeView.vala  ErrorView.vala  ProgressView.vala  SuccessView.vala  UpToDateView.vala  WarningView.vala  WelcomeView.vala
src/Widgets/: Terminal.vala
